vlib/v/scanner/tests/comments_not_terminated_err.out
vlib/v/scanner/tests/comments_not_terminated_err.vv:5:2: error: unterminated multiline comment
    3 | }
    4 |
    5 | /*
      |  ^
    6 | fn tt() {
    7 | }
